--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API Project for Coding Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node -r esm seed.js && node -r esm index.js",
+    "dev": "nodemon -r esm index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/khay/movielist#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "esm": "^3.2.25",
     "express": "^4.18.1",
     "mongoose": "^6.5.1"
   }
