--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
+    "glob": "^8.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1"
   }
